--- a/index.html
+++ b/index.html
@@ -5,19 +5,7 @@
   <meta charset="UTF-8">
   <title>Validar Email</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    body{
-     margin-top: 5%;
-    }
-    .container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 50vh;
-      background-color: rgb(200, 200, 210);
-      border-radius: 5%;
-    }
-  </style>
+  <link rel="stylesheet" href="./estilos/estilo.css">
 </head>
 
 <body>
